data: Fix devel headerbar selection-mode style
The selection-mode style was not showing.
Switch back to the initiative suggested style.

Closes: #208

--- a/data/application.css
+++ b/data/application.css
@@ -125,8 +125,15 @@ box#ArtistAlbumsWidget .artist-label {
 
 /* visual hint for development */
 .devel headerbar {
-    background: @theme_bg_color linear-gradient(to top,
-                                                alpha(@theme_selected_bg_color, 0.34),
-                                                alpha(@theme_selected_bg_color, 0.27) 2px,
-                                                alpha(@theme_selected_bg_color, 0.20) 3px);
+    background: linear-gradient(to left, #a5b1bd 0%, #a5b1bd 8%, @theme_bg_color 25%);
+    box-shadow: inset 0 1px #f1f3f5;
+    border-color: #909fae;
+    color: rgba(46, 52, 54, 0.2);
+}
+
+.devel headerbar.selection-mode {
+    background: linear-gradient(to left, #a5b1bd 0%, #a5b1bd 8%, @theme_selected_bg_color 25%);
+    box-shadow: inset 0 1px #f1f3f5;
+    border-color: #909fae;
+    color: rgba(46, 52, 54, 0.2);
 }
